# Hybrid-PI-DDPM

./: .gitignore  README.md  main.py  pyproject.toml  sample_guided.py  train_architect.py  train_engineer.py
configs/: architect.yaml  engineer.yaml  engineer_equino.yaml  engineer_shell_weakrefine_operator.yaml  sample_guided.yaml
experiments/: E_DANI.py
src/tfm_shells/: cli.py  config.py  constants.py
src/tfm_shells/data/: dataset.py  index.py
src/tfm_shells/models/: __init__.py  equino.py  factory.py  parallel_pb_unet.py  shell_weakrefine_operator.py
src/tfm_shells/sampling/: __init__.py  guided.py
src/tfm_shells/training/: common.py  train_architect.py  train_engineer.py
src/tfm_shells/utils/: io.py  matplotlib_backend.py  physics.py  tracking.py
