[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tfm-shells"
version = "0.1.0"
description = "Research-grade framework for conditional diffusion and physics-guided shell generation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Pedro" }
]
dependencies = [
  "accelerate>=1.0.0",
  "diffusers>=0.32.0",
  "matplotlib>=3.9.0",
  "mlflow>=2.17.0",
  "numpy>=2.1.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "torch>=2.5.0",
  "tqdm>=4.66.0",
]

[project.scripts]
tfm-shells = "tfm_shells.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tfm_shells"]

[tool.uv]
package = true
